# bindless-headless

./: .gitignore  BindlessHeadless.cpp  BindlessHeadless.hxx  BindlessSet.hxx  Buffer.cxx  Buffer.hxx  CMakeLists.txt  CMakePresets.json  Compiler.hxx  Forward.hxx  GlobalCommandContext.hxx  ImageOperations.cxx  ImageOperations.hxx  PCH.hxx  PipelineCache.hxx  Pool.cxx  Pool.hxx  Reflection.hxx  Types.hxx  allocator.cpp
assets/meshes/: SimpleCube.mtl  cube.glb
cmake/: CompileOptions.cmake  Dependencies.cmake  Options.cmake  Shaders.cmake  Targets.cmake  ToolchainHints.cmake
include/: AlignedRingBuffer.hxx  AlignedRingBufferImpl.inl  Allocator.hxx  ArgumentParse.hxx  BindlessHeadless.hxx  BindlessSet.hxx  Buffer.hxx  Camera.hxx  Compiler.hxx  Constants.hxx  CreateInfo.hxx  CreateInfoAutoGenerated.hxx  Forward.hxx  GlobalCommandContext.hxx  ImageOperations.hxx  Logger.hxx  Mesh.hxx  PipelineCache.hxx  Pipelines.hxx  Pool.hxx  Profiler.hxx  Reflection.hxx  ReflectionData.hxx  RenderContext.hxx  ResizeableGraph.hxx  Swapchain.hxx  Types.hxx
shaders/: common.slang  light_cull_compact_modern.slang  light_cull_prefix_compact.slang  maths.slang  point_light.slang  predepth.slang  simple_random_colour.slang  tonemap.slang  tonemapping.slang
src/: ArgumentParse.cxx  BindlessHeadless.cpp  BindlessHeadless.cxx  Buffer.cxx  Camera.cxx  Compiler.cxx  GlobalCommandContext.cxx  ImageOperations.cxx  Logger.cxx  Mesh.cxx  Pipelines.cxx  Pool.cxx  Profiler.cxx  Reflection.cxx  RenderContext.cxx  ResizeableGraph.cxx  Swapchain.cxx  Types.cxx  allocator.cpp  main.cpp
